Criação de menu simples no index e adicionando arquivo cad_compet.htm

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Competição de Natação</title>
 </head>
 <body>
-
+	<li>
+		<ul>
+			<a href="cad_compet.html">Cadastro de Competidores</a>
+		</ul>
+		<ul>
+			<a href="cad_categ.html">Cadastro de Categorias</a>
+		</ul>
+	</li>
 </body>
 </html>
