Adicionando titulo <h2> referente ao Menu

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Competição de Natação</title>
 </head>
 <body>
+
+	<h2>Menu para Cadastros da Competição</h2>
 	<li>
 		<ul>
 			<a href="cad_compet.html">Cadastro de Competidores</a>
