cad_compet foi atualizado para enviar para o arquivo script e foi colocado os metodos $_POST para recebimento dos valores

--- a/cad_compet.html
+++ b/cad_compet.html
@@ -6,7 +6,7 @@
 <body>
 	<div style="text-align: center;">
 		<h2> Cadastro de Competidor</h2>
-		<form method="post" action="natacao_insert.php">
+		<form method="post" action="script.php">
 			<p> 
 				Nome: <input type="text" name="nome" required>
 				<span style="color: red;">*</span>
