--- a/cad_compet.html
+++ b/cad_compet.html
@@ -8,12 +8,12 @@
 		<h2> Cadastro de Competidor</h2>
 		<form method="post" action="script.php">
 			<p> 
-				Nome: <input type="text" name="nome" required>
+				Nome: <input type="text" name="nome" >
 				<span style="color: red;">*</span>
 			</p>
 			<br />
 			<p>
-				Idade: <input type="number" name="idade" required>
+				Idade: <input type="number" name="idade" >
 				<span style="color: red;">*</span>
 			</p>
 	     	<br />
