Validando entrada de dados

--- a/cad_compet.html
+++ b/cad_compet.html
@@ -13,7 +13,7 @@
 			</p>
 			<br />
 			<p>
-				Idade: <input type="number" name="idade" >
+				Idade: <input type="text" name="idade" >
 				<span style="color: red;">*</span>
 			</p>
 	     	<br />
