alterei o link para cadastro no index e criei mensagens de sucesso no form e no script

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h2>Menu para Cadastros da Competição</h2>
 	<li>
 		<ul>
-			<a href="cad_compet.html">Cadastro de Competidores</a>
+			<a href="cad_compet.php">Cadastro de Competidores</a>
 		</ul>
 		<ul>
 			<a href="cad_categ.html">Cadastro de Categorias</a>
